--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-dora-reguser",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "regUser",
   "eggPlugin": {
     "name": "doraRegUser"
@@ -17,8 +17,9 @@
     "xss": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
     "validator": "^11.1.0",
-    "trek-captcha": "^0.4.0"
-
+    "trek-captcha": "^0.4.0",
+    "egg-dora-content": "^1.0.0",
+    "egg-dora-contentmessage": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -56,7 +57,7 @@
     "url": "git+https://github.com/doramart/egg-dora-reguser.git"
   },
   "bugs": {
-    "url": "https://github.com/doramart/egg/issues"
+    "url": "https://github.com/doramart/egg-dora-reguser/issues"
   },
   "homepage": "https://github.com/doramart/egg-dora-reguser#readme",
   "author": "doramart",
